--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   position: relative;
   margin: 0 auto;
   padding: 15px 50px;
-  max-width: 390px;
+  width: 390px;
   background: #569700;
   border: 10px solid #569700;
   border-radius: 0 20px;
