--- a/style.css
+++ b/style.css
@@ -24,9 +24,14 @@ body {
 
 .subscription-message {
   position: relative;
+  left: 340px;
+  width: 510px;
+  margin-bottom: 30px;
+}
+
+.subscription-text {
   margin: 0 auto;
   padding: 15px 50px;
-  width: 390px;
   background: #569700;
   border: 10px solid #569700;
   border-radius: 0 20px;
@@ -34,14 +39,14 @@ body {
 }
 
 .check__inner {
-  top: -69px;
-  left: 310px;
+  position: absolute;
+  top: 0px;
+  left: -20px;
   width: 40px;
   height: 40px;
   border: 4px solid #569700;
   border-radius: 100px;
   background: white;
-  position: relative;
 }
 
 .check {
